-------------------------- aqp 0.99-8 (2011-09-14) --------------------------
* soil.slot() will now accept boundaries defining a 'slab' over which aggregates are computed
* soil.slot.multiple() now cleanly wraps soil.slot(), accepting all of the same arguments
  - these two changes make it possible to ask: 
    "what is the wt-mean value of some property within this slab, and among these groups?"
-------------------------- aqp 0.99-7 (2011-09-01) --------------------------
* new functions for getting data out of PedonPC (MS Access) databases [windows only for now]
  - get_site_data_from_pedon_db() : site and pedon aggregate data
  - get_hz_data_from_pedon_db() : horizon level data
  - get_colors_from_pedon_db() : formats and mixes multiple colors / horizon
  + implemented in mix_and_clean_colors()

* test_hz_logic() : basic function for testing horizon logic, returns TRUE/FALSE by ID
* parallel operations now NON-functional, while we wait for plyr to support doSMP...
* new ID plotting style for profile_plot() : handy when plotting large collections and/or long IDs
-------------------------- aqp 0.99-4 (2011-08-15) --------------------------
* code and documentation clean-up
* Soil Sata Access (SDA) query functions have been added
  - mapunit_geom_by_ll_bbox() : get map unit geometry by bounding box
  - MUKEYS_by_ll_bbox() : get map unit keys by bounding box
  - SDA_query() : retrieve soil tabular data via query written in SQL
* additional customizations added to profile_plot
* two new sample data sets + examples

-------------------------- aqp 0.99-1 (2011-01-26) --------------------------
* soil.slot() and profile_compare() now have support for parallel computation thanks to bug-fixes in plyr 1.4
  - plyr >= 1.4, foreach, and doMC packages are required
  - specific examples are not yet documented, but should be soon
  - this feature is still experimental! testing is advised